plugins {
	id 'java'
	id 'org.fulib.fulibGradle' version '0.2.0'
}

group = 'org.fulib'
version = '0.1.0'

sourceCompatibility = 1.8

repositories {
	mavenLocal()
	mavenCentral()
	jcenter()
	maven { url = 'https://oss.sonatype.org/content/repositories/snapshots' }
}

dependencies {
	// https://mvnrepository.com/artifact/org.fulib/fulibScenarios
	fulibScenarios group: 'org.fulib', name: 'fulibScenarios', version: '1.0.0'

	compile 'org.fulib:fulibTools:1.+'
	compile 'org.fulib:fulibMockups:+'
	compile 'org.fulib:fulibTables:1.1.0'
	compile "com.sparkjava:spark-core:2.8.0"
	compile group: 'org.json', name: 'json', version: '20190722'
	implementation group: 'org.antlr', name: 'ST4', version: '4.3'


	// https://mvnrepository.com/artifact/junit/junit
	testCompile group: 'junit', name: 'junit', version: '4.12'
	implementation 'com.codeborne:selenide:5.9.0'
}

generateScenarioSource {
	classDiagramSVG = true
}
